--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ include_package_data = True
 python_requires = >=3.11
 install_requires =
     cognixcore < 1
-    numpy
+    numpy < 2
     pyxdf
     pylsl
     xmltodict
